<resources>
    <string name="app_name">RapidBar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_bars">Bars</string>
    <string name="menu_drinks">Drinks</string>
    <string name="menu_snacks">Snacks</string>
    <string name="menu_credit_cards">Credit cards</string>
    <string name="menu_consumption_record">Consumption record</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_products">Products</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tittle_drink_name">Name</string>
    <string name="tittle_drink_description">Description</string>
    <string name="tittle_drink_price">Price</string>
    <string name="tittle_drink_go_to_bar">Go to bar</string>
    <string name="tittle_bar_name">Name</string>
    <string name="tittle_bar_description">Description</string>
    <string name="tittle_type_bar_name">Type Bar Name</string>
    <string name="tittle_bar_adress">Bar address</string>
    <string name="tittle_see_more_adress">See more</string>
    <string name="tittle_number_credit_card">Number: </string>
    <string name="tittle_expiration_date_credit_card">Expiration date: </string>
    <string name="tittle_order_total_amount">Total amount: </string>
    <string name="tittle_order_date">Date: </string>
    <string name="tittle_order_bar_name">Bar name: </string>
    <string name="tittle_order_see_more">See more</string>
    <string name="tittle_detail_quantity">Quantity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="title_activity_main_employee">MainEmployeeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="barman">Barman</string>
    <string name="waiter">Waiter</string>
    <string name="chef">Chef</string>
    <string name="stock">Stock</string>
    <string name="number_credit_card">Credit card number</string>
    <string name="expiration_date_credit_card">Expiration date</string>

    <string name="USER_TYPE_CUSTOMER">1</string>
    <string name="USER_TYPE_EMPLOYEE">2</string>
    <string name="USER_TYPE_MANAGER">3</string>
    <string name="month">Month</string>
    <string name="Year">Year</string>
    <string name="credit_card_number">Credit card number</string>
    <string name="title_activity_bar">BarActivity</string>

    <string name="buy_product">Add to cart</string>
    <string name="User">User</string>
    <string name="total_amount">Total Amount</string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="name">name</string>
</resources>





































