<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/menu_products"
            android:layout_gravity="bottom">
            <menu>
                <item
                    android:id="@+id/nav_drinks"
                    android:icon="@drawable/ic_drink_24dp"
                    android:title="@string/menu_drinks" />
                <item
                    android:id="@+id/nav_snacks"
                    android:icon="@drawable/ic_restaurant_black_24dp"
                    android:title="@string/menu_snacks" />
            </menu>
        </item>
        <item
            android:id="@+id/nav_bars"
            android:icon="@drawable/ic_store_24dp"
            android:title="@string/menu_bars" />
        <item
            android:id="@+id/nav_credit_cards"
            android:icon="@drawable/ic_credit_card_24dp"
            android:title="@string/menu_credit_cards" />
        <item
            android:id="@+id/nav_consumption_records"
            android:icon="@drawable/ic_history_24dp"
            android:title="@string/menu_consumption_record" />
        <!--<item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_border_24dp"
            android:title="@string/menu_favorites" />-->
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_log_out" />
    </group>
</menu>
