<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_margin">

    <EditText
        android:id="@+id/nameEditText"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/emailEditText"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/passwordEditText"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>