<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_margin">

    <com.braintreepayments.cardform.view.CardEditText
        android:id="@+id/cardEditText"
        android:hint="@string/credit_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <EditText
            android:id="@+id/monthExpirationEditText"
            android:hint="@string/month"
            android:layout_width="wrap_content"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/yearExpirationEditText"
            android:hint="@string/Year"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>