<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/default_margin"
    app:cardCornerRadius="@dimen/card_corner_radius_size"
    app:cardElevation="@dimen/card_elevation_size">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/orderTotalAmountTextView"
            android:text="@string/tittle_order_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/orderDateTextView"
            android:text="@string/tittle_order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderTotalAmountTextView"/>

        <TextView
            android:id="@+id/orderBarNameTextView"
            android:text="@string/tittle_order_bar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderDateTextView"/>

        <TextView
            android:id="@+id/orderSeeMoreTextView"
            android:text="@string/tittle_order_see_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderBarNameTextView"
            android:textColor="@color/colorAccent"
            style="@style/Base.TextAppearance.AppCompat.Medium"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>