<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/default_margin"
    app:cardCornerRadius="@dimen/card_corner_radius_size"
    app:cardElevation="@dimen/card_elevation_size">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.androidnetworking.widget.ANImageView
            android:id="@+id/drinkPictureANImageView"
            android:layout_width="@dimen/card_drink_width"
            android:layout_height="@dimen/card_drink_height"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/drinkNameTextView"
            android:text="@string/tittle_drink_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintStart_toEndOf="@id/drinkPictureANImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/drinkDescriptionTextView"
            android:text="@string/tittle_drink_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintStart_toEndOf="@id/drinkPictureANImageView"
            app:layout_constraintTop_toBottomOf="@id/drinkNameTextView"/>

        <TextView
            android:id="@+id/drinkPriceTextView"
            android:text="@string/tittle_drink_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintStart_toEndOf="@id/drinkPictureANImageView"
            app:layout_constraintTop_toBottomOf="@id/drinkDescriptionTextView"/>

        <RatingBar
            android:id="@+id/drinkRateRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintStart_toEndOf="@id/drinkPictureANImageView"
            app:layout_constraintTop_toBottomOf="@id/drinkPriceTextView"
            android:numStars="5"
            android:rating="3"
            style="@style/Base.Widget.AppCompat.RatingBar.Small"/>

        <TextView
            android:id="@+id/orderDetailTotalAmountTextView"
            android:text="@string/tittle_detail_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/drinkRateRatingBar"
            android:textColor="@color/colorAccent"
            style="@style/Base.TextAppearance.AppCompat.Medium"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>