<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/swipe_row_background">

        <ImageView
            android:id="@+id/check_icon"
            android:layout_width="@dimen/ic_check"
            android:layout_height="@dimen/ic_check"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/padd_10"
            android:tint="@color/colorIcons"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/padd_10"
            android:layout_toLeftOf="@id/check_icon"
            android:text="LISTO"
            android:textColor="#fff"
            android:textSize="13dp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/view_foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/padd_10">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/orderTotalAmountTextView"
                android:text="@string/tittle_order_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/orderDateTextView"
                android:text="@string/tittle_order_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderTotalAmountTextView"/>

            <TextView
                android:id="@+id/orderBarNameTextView"
                android:text="@string/tittle_order_bar_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderDateTextView"/>

            <TextView
                android:id="@+id/orderSeeMoreTextView"
                android:text="@string/tittle_order_see_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderBarNameTextView"
                android:textColor="@color/colorAccent"
                style="@style/Base.TextAppearance.AppCompat.Medium"/>

        </android.support.constraint.ConstraintLayout>





    </RelativeLayout>

</FrameLayout>